changed thread getId deprecated method to threadId